--- a/index.html
+++ b/index.html
@@ -3,32 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hubtown Heaven Parking</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#317EFB"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Parking App</title>
+    <link rel="manifest" href="/manifest.json">
+    <script>
+        window.location.href = "https://script.google.com/macros/s/AKfycbwTV2A5IVeB1cM8ks7R0NzrXxseAIIDttyMQj06E4fytbXsUWzDVwDJPOvnLOKLI5uVjg/exec";
+    </script>
 </head>
 <body>
-    <iframe id="siteFrame" src="https://script.google.com/macros/s/AKfycbwTV2A5IVeB1cM8ks7R0NzrXxseAIIDttyMQj06E4fytbXsUWzDVwDJPOvnLOKLI5uVjg/exec" frameborder="0" width="100%" height="100%"></iframe>
-
-    <button onclick="updatePWA()">Refresh App</button>
-
-    <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
-                .then((reg) => console.log('Service Worker Registered', reg))
-                .catch((err) => console.log('Service Worker Registration Failed', err));
-        }
-
-        function updatePWA() {
-            caches.keys().then((keyList) => {
-                return Promise.all(keyList.map((key) => {
-                    return caches.delete(key);  // Clear all caches
-                }));
-            }).then(() => {
-                window.location.reload(true);  // Force reload from network
-            });
-        }
-    </script>
+    <h1>Redirecting...</h1>
 </body>
 </html>
