--- a/OrderForm.html
+++ b/OrderForm.html
@@ -4,6 +4,199 @@
   <title>Order Management</title>
   <style>
     /* Include your CSS styles here */
+/* Reset some default browser styles */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Arial', sans-serif;
+}
+
+/* General Body Styles */
+body {
+  background-color: #181818;
+  color: #fff;
+  font-size: 20px;
+  line-height: 1.6;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+/* Container for the entire page */
+.container {
+  width: 100%;
+  max-width: 900px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+/* Main Form Styles */
+.main-content {
+  background-color: #222;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.main-content h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  color: #f0b400;
+}
+
+.main-content h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.main-content label {
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+form select,
+form label,
+form input[type="number"],
+form input[type="text"],
+form textarea {
+  background-color: #333;
+  border: 1px solid #444;
+  color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 30px;
+}
+
+
+
+form select:focus,
+form label:focus,
+form input[type="number"]:focus,
+form input[type="text"]:focus,
+form textarea:focus {
+  border-color: #f0b400;
+  outline: none;
+}
+
+form button {
+  background-color: #f0b400;
+  color: #252525;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 20px;
+  transition: background-color 0.3s ease;
+}
+
+form button:hover {
+  background-color: #f8c247;
+}
+
+
+/* Status Ribbon Styling */
+.status-ribbon {
+  background-color: #252525;
+  color: #f0b400;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 18px;
+  margin-top: 10px;
+}
+
+/* Add New Order Button */
+.add-order-btn {
+  background-color: #f0b400;
+  color: #252525;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 20px;
+  text-align: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.add-order-btn:hover {
+  background-color: #f8c247;
+}
+
+button:disabled {
+    background-color: #bdc3c7;
+    cursor: not-allowed;
+    opacity: 0.7;  /* Slight transparency for disabled state */
+    box-shadow: none;  /* Remove hover effect for disabled button */
+}
+
+
+/* Orders List Styling */
+.orders-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.orders-list li {
+  background-color: #333;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.orders-list li:hover {
+  background-color: #f0b400;
+  color: #252525;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .container {
+    gap: 10px;
+  }
+
+  .main-content {
+    padding: 15px;
+  }
+
+  .status-ribbon {
+    font-size: 20px;
+  }
+
+  .add-order-btn {
+    padding: 8px;
+    font-size: 20px;
+  } 
+}
+
+ .variant {
+    width : 25%;
+  }
+
+.quantity {
+  width : 23%;
+}
+.rate {
+  visibility: hidden;
+  width : 5px;
+}
+
+.category {
+  width : 40%;
+}
+.product {
+  width : 50%;
+}
+    
   </style>
 </head>
 <body>
