--- a/OrderForm.html
+++ b/OrderForm.html
@@ -222,6 +222,7 @@ button:disabled {
   function authenticate() {
     if (!tokenClient) {
       console.error('OAuth client not initialized. Make sure the library is loaded.');
+      initializeOAuth();
       return;
     }
     tokenClient.requestAccessToken();
