--- a/OrderForm.html
+++ b/OrderForm.html
@@ -214,7 +214,7 @@ button:disabled {
       scope: 'https://www.googleapis.com/auth/script.projects',
       callback: (tokenResponse) => {
         console.log('OAuth Token:', tokenResponse.access_token);
-        authenticate();
+     //   authenticate();
         fetchMetadata();
         fetchOrders();
 
