--- a/OrderForm.html
+++ b/OrderForm.html
@@ -203,7 +203,8 @@ button:disabled {
 
     const SCRIPT_ID = '1Aja6tuiUG-fEVxwNVqZNKictm5uYM3pBO7aKfbiuYO9xES9oEXksMTiZ'; // Replace with your Apps Script Script ID
     const CLIENT_ID = '927225206545-vvf4jesk7glft8ecq756m7gmf135ivnq.apps.googleusercontent.com'; // Replace with your Google OAuth 2.0 Client ID
-    const API_SCOPE = 'https://www.googleapis.com/auth/script.projects';
+    const API_SCOPE = 'https://www.googleapis.com/auth/script.projects https://www.googleapis.com/auth/script.external_request https://www.googleapis.com/auth/spreadsheets https://www.googleapis.com/auth/script.container.ui https://www.googleapis.com/auth/userinfo.email';
+    
     let metadata;
 
   let tokenClient;
@@ -212,7 +213,7 @@ button:disabled {
   function initializeOAuth() {
     tokenClient = google.accounts.oauth2.initTokenClient({
       client_id: '927225206545-vvf4jesk7glft8ecq756m7gmf135ivnq.apps.googleusercontent.com', // Replace with your client ID
-      scope: 'https://www.googleapis.com/auth/script.projects',
+      scope: API_SCOPE,
       callback: (tokenResponse) => {
         console.log('OAuth Token:', tokenResponse.access_token);     
         access_token = tokenResponse.access_token;
