--- a/OrderForm.html
+++ b/OrderForm.html
@@ -197,7 +197,7 @@ button:disabled {
   width : 50%;
 }    
   </style>
-  <script src="https://accounts.google.com/gsi/client" async defer onload="initializeOAuth()"></script>
+  <script src="https://accounts.google.com/gsi/client" async onload="initializeOAuth()"></script>
 
   <script>
 
