--- a/OrderForm.html
+++ b/OrderForm.html
@@ -197,7 +197,7 @@ button:disabled {
   width : 50%;
 }    
   </style>
-  <script src="https://accounts.google.com/gsi/client" async onload="initializeOAuth()"></script>
+  <script src="https://accounts.google.com/gsi/client" onload="initializeOAuth()"></script>
 
   <script>
 
@@ -216,11 +216,9 @@ button:disabled {
       scope: API_SCOPE,
       callback: (tokenResponse) => {
         console.log('OAuth Token:', tokenResponse.access_token);     
-        access_token = tokenResponse.access_token;
-        authenticate();
+        access_token = tokenResponse.access_token;        
         fetchMetadata();
         fetchOrders();
-
       },
     });
     
