--- a/OrderForm.html
+++ b/OrderForm.html
@@ -217,6 +217,10 @@ button:disabled {
       callback: (tokenResponse) => {
         console.log('OAuth Token:', tokenResponse.access_token);     
         access_token = tokenResponse.access_token;        
+
+        localStorage.setItem('google_access_token', access_token);
+        localStorage.setItem('google_token_expires', Date.now() + tokenResponse.expires_in * 1000);
+         
         fetchMetadata();
         fetchOrders();
       },
@@ -231,7 +235,21 @@ button:disabled {
       console.error('OAuth client not initialized. Make sure the library is loaded.');
       return;
     }
-    tokenClient.requestAccessToken();
+    const storedToken = localStorage.getItem('google_access_token');
+    const tokenExpires = localStorage.getItem('google_token_expires');
+
+    if (storedToken && tokenExpires && Date.now() < parseInt(tokenExpires)) {
+      // Token exists and is valid
+      access_token = storedToken;
+      console.log('Reusing stored access token:', storedToken);
+      fetchMetadata();
+      fetchOrders();
+      return ;
+    } else {
+      // Token is missing or expired, request a new one
+      console.log('Requesting a new access token');
+      tokenClient.requestAccessToken();
+    }
   }
 
     // Make a POST request to the API Executable
