--- a/OrderForm.html
+++ b/OrderForm.html
@@ -292,6 +292,128 @@ button:disabled {
       }
     }
 
+    function displayOrders(orders) {
+  const orderList = document.getElementById("orderList");
+  orderList.innerHTML = "";
+
+  if (!orders || orders.length === 0) {
+    orderList.innerHTML = "<p>No orders found.</p>";
+    return;
+  }
+
+
+  const table = document.createElement("table");
+  table.classList.add("sortable");
+  table.style.borderCollapse = "collapse";
+  table.style.width = "100%";
+  table.style.fontSize = "15px"; // Reduce font size
+
+
+  // Create the table header
+  const thead = document.createElement("thead");
+  const headerRow = document.createElement("tr");
+  const headers = ["Order ID", "Client", "Mode", "Company", "Size", "Rate", "Quantity", "Timestamp", "User"];
+
+  headers.forEach(header => {
+    const th = document.createElement("th");
+    th.textContent = header;
+    th.style.border = "1px solid red";
+    th.style.cursor = "pointer";
+    th.onclick = () => sortTable(table, headers.indexOf(header)); // Add sorting functionality
+    headerRow.appendChild(th);
+  });
+
+  thead.appendChild(headerRow);
+  table.appendChild(thead);
+
+  // Create the table body
+  const tbody = document.createElement("tbody");
+  orders.forEach(order => {
+    const row = document.createElement("tr");
+
+    const cells = [
+      order.orderId,
+      order.client,
+      order.mode,
+      order.category,
+      order.product,
+      order.variant,
+      order.quantity,
+      order.timestamp,
+      order.salesEmail,
+    ];
+
+    cells.forEach(cellValue => {
+      const td = document.createElement("td");
+      td.textContent = cellValue;
+      td.style.border = "1px solid red";
+      td.style.padding = "5px";
+      row.appendChild(td);
+    });
+
+    row.onclick = () => loadOrder(order.orderId); // Add click event to load order
+    tbody.appendChild(row);
+  });
+
+  table.appendChild(tbody);
+  orderList.appendChild(table);
+
+  // Add a filter input above the table
+  const filterInput = document.createElement("input");
+  filterInput.type = "text";
+  filterInput.style.fontSize = "20px";
+  filterInput.placeholder = "Filter orders...";
+  filterInput.onkeyup = () => filterTable(table, filterInput.value);
+  orderList.insertBefore(filterInput, table);
+}
+
+// Function to sort the table
+function sortTable(table, columnIndex) {
+  const rows = Array.from(table.querySelector("tbody").rows);
+  const isAscending = table.dataset.sortOrder !== "asc";
+  rows.sort((a, b) => {
+    const aText = a.cells[columnIndex].textContent.trim();
+    const bText = b.cells[columnIndex].textContent.trim();
+    return isAscending
+      ? aText.localeCompare(bText, undefined, { numeric: true })
+      : bText.localeCompare(aText, undefined, { numeric: true });
+  });
+
+  rows.forEach(row => table.querySelector("tbody").appendChild(row));
+  table.dataset.sortOrder = isAscending ? "asc" : "desc";
+}
+
+// Function to filter the table
+function filterTable(table, query) {
+  const rows = Array.from(table.querySelector("tbody").rows);
+  rows.forEach(row => {
+    const isVisible = Array.from(row.cells).some(cell =>
+      cell.textContent.toLowerCase().includes(query.toLowerCase())
+    );
+    row.style.display = isVisible ? "" : "none";
+  });
+}
+
+    function addNewOrder() {
+      currentOrderId = null;
+      document.getElementById("formTitle").textContent = "New Order";
+      document.getElementById("clientField").value = "";
+      document.getElementById("modeField").value = "";
+      document.getElementById("commentsField").value = "";
+      document.getElementById("itemRows").innerHTML = `<div class="itemRow">
+        <select class="category"><option value="">Company</option></select>
+        <select class="product"><option value="">Size</option></select><BR>
+        <label>Quantity</label>
+        <input type="number" title="Enter Quantity" class="quantity" placeholder="Quantity" min="1" />
+        <label>Rate</label>
+        <input type="number" title="Enter Rate" class="rate" placeholder="Rate" min="1" />
+        <select class="variant"><option value="">Rate</option></select>        
+        <button onclick="removeRow(this)">-</button>
+      </div>`;
+      populateDropdowns();
+      document.getElementById('addRowBtn').disabled = false;
+    }
+    
   </script>
 </head>
 
