--- a/OrderForm.html
+++ b/OrderForm.html
@@ -203,7 +203,7 @@ button:disabled {
 
     const SCRIPT_ID = '1Aja6tuiUG-fEVxwNVqZNKictm5uYM3pBO7aKfbiuYO9xES9oEXksMTiZ'; // Replace with your Apps Script Script ID
     const CLIENT_ID = '927225206545-vvf4jesk7glft8ecq756m7gmf135ivnq.apps.googleusercontent.com'; // Replace with your Google OAuth 2.0 Client ID
-    const API_SCOPE = 'https://www.googleapis.com/auth/script.projects https://www.googleapis.com/auth/script.external_request https://www.googleapis.com/auth/spreadsheets https://www.googleapis.com/auth/script.container.ui https://www.googleapis.com/auth/userinfo.email';
+    const API_SCOPE = 'https://www.googleapis.com/auth/spreadsheets https://www.googleapis.com/auth/userinfo.email';
     
     let metadata;
     let currentOrderId = null;
