--- a/ParkingWeb/index.html
+++ b/ParkingWeb/index.html
@@ -2,241 +2,7 @@
 <html>
   <head>
     <title>Parking System 1</title>
-    <style>
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    overflow-y: auto;
-    height: 100vh;
-    background-color: #f4f7fc;
-}
-
-.container {
-    width: 100%;
-    max-width: 600px;
-    background: #ffffff;
-    padding: 40px 30px;
-    border-radius: 12px;
-    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
-}
-
-h1, h2 {
-    color: #2c3e50;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-h1 {
-    font-size: 2rem;
-    font-weight: 600;
-}
-
-h2 {
-    font-size: 1.5rem;
-    font-weight: 500;
-}
-
-p {
-    color: #555;
-    font-size: 2rem;
-    line-height: 1.6;
-    text-align: center;
-}
-
-button {
-    width: 100%;
-    padding: 12px;
-    margin-top: 20px;
-    font-size: 2rem;
-    font-weight: 500;
-    color: #fff;
-    background-color: #007BFF;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, opacity 0.3s ease;
-}
-
-
-
-button:hover {
-    background-color: #0056b3;
-}
-
-button:disabled {
-    background-color: #bdc3c7;
-    cursor: not-allowed;
-    opacity: 0.7;  /* Slight transparency for disabled state */
-    box-shadow: none;  /* Remove hover effect for disabled button */
-}
-
-#topSection {
-    position: sticky;
-    top: 0;
-    background-color: white;
-    padding: 15px;
-    z-index: 10;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  /* Optional shadow for visibility */
-  }
-
-#removeBtn {
-    background-color: #e74c3c;
-}
-
-#removeBtn:hover {
-    background-color: #c0392b;
-}
-
-#removeBtn:disabled {
-    background-color: #d5d8dc;
-    color: #7f8c8d;
-    opacity: 0.7;
-    cursor: not-allowed;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-label {
-    margin: 15px 0 5px;
-    font-weight: 500;
-}
-
-input[type="text"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    font-size: 1rem;
-}
-
-.footer {
-    margin-top: 30px;
-    font-size: 0.85rem;
-    color: #7f8c8d;
-    text-align: center;
-}
-
-.footer a {
-    color: #3498db;
-    text-decoration: none;
-}
-
-.footer a:hover {
-    text-decoration: underline;
-}
-
-@keyframes blink {
-    50% {
-        opacity: 0;
-    }
-}
-
-#pslot {
-    font-size: 2rem;
-    font-weight: 600;
-    color: blue;
-    text-align: center;
-}
-
-#pslot .slot {
-    font-weight: 700;
-    color: red;
-    animation: blink 1s step-start infinite;
-}
-
-#hptext {
-    font-size: 1rem;    
-    color: red;
-    text-align: center;
-}
-
-    .loading {
-      display: none;
-      font-size: 18px;
-      color: #333;
-    }
-    .spinner {
-      display: inline-block;
-      width: 30px;
-      height: 30px;
-      border: 4px solid rgba(0, 0, 0, 0.1);
-      border-left-color: #09f;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-    }
-    @keyframes spin {
-      to {
-        transform: rotate(360deg);
-      }
-    }
-
-    #occupiedSlotsTable {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-    #occupiedSlotsTable th, #occupiedSlotsTable td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: center;
-    }
-    #occupiedSlotsTable th {
-      background-color: #4CAF50;
-      color: white;
-    }
-
-    
-
-  #gridContainer {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 Columns */
-    gap: 10px;
-  }
-
-     .parking-grid {
-      display: grid;
-      grid-template-columns: repeat(4, 80px);
-      grid-gap: 10px;
-      justify-content: center;
-      margin-top: 30px;
-    }
-    .slotbox {
-      width: 80px;
-      height: 80px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border: 1px solid #ccc;
-      font-size: 16px;
-      font-weight: bold;
-      background-color: #f0f0f0;
-    }
-    .occupied {
-      background-color: #ff4d4d;  /* Red for occupied */
-      color: white;
-      border-radius: 50%;
-    }
-    .available {
-      background-color: #4CAF50;  /* Green for available */
-      color: white;
-      border-radius: 50%;
-    }
-    .na {
-      background-color: #ddd;
-      color: black;
-      pointer-events: none;
-    }
-
-
-    </style>
+    <link rel="stylesheet" href="styles.css">
     <script>
       function handleAction(action) {
         // Disable buttons after click to prevent multiple submissions
