--- a/ParkingWeb/index.html
+++ b/ParkingWeb/index.html
@@ -71,7 +71,7 @@
 
     <script>
         const CLIENT_ID = "231804756203-pon52d0g8l3arj4efscmedusaknankda.apps.googleusercontent.com"; // Replace with your Client ID
-        const API_KEY = "YOUR_API_KEY"; // Replace with your API Key
+        const API_KEY = "AIzaSyBwG9LYoHMR2JXz0ANp83rBAl5K2LKds9w"; // Replace with your API Key
         const SHEET_ID = "12Va7yzdDhdp5NfSGXYrNtF6ZCHZxKq9gRnq0S9Xo0M8"; // Replace with your Google Sheet ID
         const RANGE = "Sheet1!A:B"; // Adjust based on your sheet structure
         const DISCOVERY_DOCS = ["https://sheets.googleapis.com/$discovery/rest?version=v4"];
