--- a/ParkingWeb/index.html
+++ b/ParkingWeb/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parking Allocation</title>
-    <script src="https://apis.google.com/js/api.js"></script> <!-- Load Google API -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <style>
         .grid {
             display: grid;
@@ -73,62 +73,81 @@
         const CLIENT_ID = "231804756203-pon52d0g8l3arj4efscmedusaknankda.apps.googleusercontent.com"; // Replace with your Client ID
         const API_KEY = "AIzaSyBwG9LYoHMR2JXz0ANp83rBAl5K2LKds9w"; // Replace with your API Key
         const SHEET_ID = "12Va7yzdDhdp5NfSGXYrNtF6ZCHZxKq9gRnq0S9Xo0M8"; // Replace with your Google Sheet ID
-        const RANGE = "Sheet1!A:B"; // Adjust based on your sheet structure
+        const RANGE = "Slots!A:B"; // Adjust based on your sheet structure
         const DISCOVERY_DOCS = ["https://sheets.googleapis.com/$discovery/rest?version=v4"];
         const SCOPES = "https://www.googleapis.com/auth/spreadsheets";
 
         let selectedCell = null;
         let parkingSlots = [];
-        let parkedFlats = {};
+        let parkedFlats = {};    
+        let accessToken = "";
 
-        function gapiLoaded() {
-            gapi.load("client:auth2", initializeGAPI);
-        }
-
-        function initializeGAPI() {
-            gapi.client.init({
-                apiKey: API_KEY,
-                clientId: CLIENT_ID,
-                discoveryDocs: DISCOVERY_DOCS,
-                scope: SCOPES
-            });
-        }
-
-        function handleAuthClick() {
-            gapi.auth2.getAuthInstance().signIn().then(() => {
-                fetchParkingData();
-            });
-        }
-
-        async function fetchParkingData() {
-            try {
-                const response = await gapi.client.sheets.spreadsheets.values.get({
-                    spreadsheetId: SHEET_ID,
-                    range: RANGE
-                });
-
-                const data = response.result.values || [];
-
-                parkingSlots = [];
-                for (let r = 7; r >= 1; r--) {
-                    let row = [];
-                    for (let c = 1; c <= 4; c++) {
-                        if (r < 7 && c === 4) {
-                            row.push({ slot: "", status: "Disabled" });
-                        } else {
-                            const slotNum = `${r}0${c}`;
-                            const found = data.find(d => d[0] === slotNum);
-                            row.push({ slot: slotNum, status: found ? found[1] : "Empty" });
-                        }
+        // Initialize Google Identity Services (GIS)
+        function initGIS() {
+            google.accounts.oauth2.initTokenClient({
+                client_id: CLIENT_ID,
+                scope: "https://www.googleapis.com/auth/spreadsheets",
+                callback: (response) => {
+                    if (response.access_token) {
+                        accessToken = response.access_token;
+                        fetchParkingData();
+                    } else {
+                        console.error("Error retrieving access token.");
                     }
-                    parkingSlots.push(row);
-                }
-                renderGrid();
+                },
+            }).requestAccessToken();
+        }
+
+        // Fetch Parking Data from Google Sheets
+        async function fetchParkingData() {
+            const range = "Sheet1!A1:B20"; // Update the range based on your sheet
+            const url = `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${range}?key=${API_KEY}`;
+            
+            try {
+                let response = await fetch(url, {
+                    headers: { Authorization: `Bearer ${accessToken}` },
+                });
+                let data = await response.json();
+                console.log("Fetched Data:", data);
+                updateGrid(data.values);
             } catch (error) {
-                console.error("Error fetching data:", error);
+                console.error("Error fetching parking data:", error);
             }
         }
 
+        // Update parking status in Google Sheets
+        async function updateParking(slot, status) {
+            const range = "Sheet1!A1:B20"; // Update this range
+            const url = `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${range}?valueInputOption=RAW`;
+
+            const body = {
+                range: range,
+                majorDimension: "ROWS",
+                values: [[slot, status]],
+            };
+
+            try {
+                let response = await fetch(url, {
+                    method: "PUT",
+                    headers: {
+                        Authorization: `Bearer ${accessToken}`,
+                        "Content-Type": "application/json",
+                    },
+                    body: JSON.stringify(body),
+                });
+                let result = await response.json();
+                console.log("Updated Parking Data:", result);
+                fetchParkingData(); // Refresh grid after update
+            } catch (error) {
+                console.error("Error updating parking data:", error);
+            }
+        }
+
+        // Call GIS authentication when the page loads
+        window.onload = () => {
+            document.getElementById("loginButton").onclick = initGIS;
+        };
+        
         function renderGrid() {
             const grid = document.getElementById("parkingGrid");
             grid.innerHTML = "";
